@@ -1,17 +1,19 @@
 package com.hntxrj.txerp.im;
 
 // 使用旧版本 base64 编解码实现增强兼容性
-import sun.misc.BASE64Encoder;
+
 
 import java.io.UnsupportedEncodingException;
+import java.nio.charset.StandardCharsets;
 import java.security.*;
-import java.nio.charset.Charset;
 
 import java.util.Arrays;
+import java.util.Base64;
 import java.util.zip.Deflater;
 
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
+
 import org.json.JSONObject;
 
 public class TLSSigAPIv2 {
@@ -32,24 +34,20 @@ public class TLSSigAPIv2 {
             contentToBeSigned += "TLS.userbuf:" + base64Userbuf + "\n";
         }
         try {
-            byte[] byteKey = key.getBytes("UTF-8");
+            byte[] byteKey = key.getBytes(StandardCharsets.UTF_8);
             Mac hmac = Mac.getInstance("HmacSHA256");
             SecretKeySpec keySpec = new SecretKeySpec(byteKey, "HmacSHA256");
             hmac.init(keySpec);
             byte[] byteSig = hmac.doFinal(contentToBeSigned.getBytes("UTF-8"));
-            return (new BASE64Encoder().encode(byteSig)).replaceAll("\\s*", "");
-        } catch (UnsupportedEncodingException e) {
-            return "";
-        } catch (NoSuchAlgorithmException e) {
-            return "";
-        } catch (InvalidKeyException  e) {
+            return (Base64.getEncoder().encodeToString(byteSig)).replaceAll("\\s*", "");
+        } catch (UnsupportedEncodingException | NoSuchAlgorithmException | InvalidKeyException e) {
             return "";
         }
     }
 
     private String genSig(String identifier, long expire, byte[] userbuf) {
 
-        long currTime = System.currentTimeMillis()/1000;
+        long currTime = System.currentTimeMillis() / 1000;
 
         JSONObject sigDoc = new JSONObject();
         sigDoc.put("TLS.ver", "2.0");
@@ -60,7 +58,7 @@ public class TLSSigAPIv2 {
 
         String base64UserBuf = null;
         if (null != userbuf) {
-            base64UserBuf = new BASE64Encoder().encode(userbuf);
+            base64UserBuf = Base64.getEncoder().encodeToString(userbuf);
             sigDoc.put("TLS.userbuf", base64UserBuf);
         }
         String sig = hmacsha256(identifier, currTime, expire, base64UserBuf);
@@ -69,9 +67,9 @@ public class TLSSigAPIv2 {
         }
         sigDoc.put("TLS.sig", sig);
         Deflater compressor = new Deflater();
-        compressor.setInput(sigDoc.toString().getBytes(Charset.forName("UTF-8")));
+        compressor.setInput(sigDoc.toString().getBytes(StandardCharsets.UTF_8));
         compressor.finish();
-        byte [] compressedBytes = new byte[2048];
+        byte[] compressedBytes = new byte[2048];
         int compressedBytesLength = compressor.deflate(compressedBytes);
         compressor.end();
         return (new String(Base64URL.base64EncodeUrl(Arrays.copyOfRange(compressedBytes,
